# notion2md

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  REDME.md
cases/: test_expected.md
ground-truth/: output.md  package-lock.json  package.json  tsconfig.json
ground-truth/src/: index.ts
src/: builder.rs  lib.rs  notion_to_md.rs  types.rs  utils.rs
src/converters/: mod.rs
tests/: test-convert.rs
