[package]
name = "notion-to-md-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
notion-client = { path = "_lib/notion-client" }
regex = "1.11.1"
reqwest = {version = "0.12.15", features = ["blocking"]}
tokio = {version = "1.44.2", features = ["full"]}
