[package]
name = "notion2md"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A Rust library for converting Notion pages to Markdown"
authors = ["4kk11"]
license = "MIT"
repository = "https://github.com/4kk11/notion2md"
keywords = ["notion", "markdown", "converter", "documentation"]
categories = ["text-processing", "development-tools"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
notion-client = "^1.0.5"
regex = "1.11.1"
reqwest = {version = "0.12.15", features = ["blocking"]}
tokio = {version = "1.44.2", features = ["full"]}
